[package]
name = "saunter"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "A library for tick based game engines"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/saunter"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin_sleep = "1.1.1"

[dev-dependencies]
winit = "0.27.5"
simplelog = "0.12.0"