workspace = { members = ["saunter-derive"] }

[package]
name = "saunter"
authors = ["Gavin Niederman <gavinniederman@gmail.com>"]
description = "A library for tick based game engines"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/saunter"
keywords = ["engine", "game", "tick"]
readme = "README.md"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
spin_sleep = "1.1.1"
saunter-derive = { version = "0.1.0", path = "./saunter-derive", optional = true }

[dev-dependencies]
winit = "0.29.4"
simplelog = "0.12.0"

[features]
default = ["derive"]

derive = ["dep:saunter-derive"]
