[package]
name = "saunter-derive"
version = "0.1.0"
edition = "2021"
description = "Proc macros for the Saunter crate"
license = "MIT"
repository = "https://github.com/Gavin-Niederman/saunter"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = "2.0.39"
